--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+env_logger = "0.11.8"
 gl = "0.14.0"
 glam = "0.30.4"
 glfw = "0.59.0"
 image = "0.24.4"
+log = "0.4.27"
